--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,5 +3,13 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": []
+    "configurations": [
+        {
+            "type": "java",
+            "name": "Launch Driver",
+            "request": "launch",
+            "mainClass": "Java.Driver",
+            "projectName": "Assignment1_8d30d3d"
+        }
+    ]
 }
